# virtual-storage-manager

./: AUTHORS  buildvsm.sh  install.sh
.lib/: vsm  vsm-dashboard  vsm-deploy  vsmclient
centos7/vsm/: vsm.spec
centos7/vsm-deploy/: vsm-deploy.spec
source/python-vsmclient/: python-vsmclient.spec  setup.cfg
source/python-vsmclient/vsmclient/: __init__.py  utils.py
source/python-vsmclient/vsmclient/v1/: client.py  hs_instances.py  hs_performance_metrics.py  hs_rbd_cache_configs.py  hyperstash.py  servers.py  shell.py
source/vsm/: setup.cfg  vsm.spec
source/vsm-dashboard/: vsm-dashboard.spec
source/vsm-dashboard/vsm_dashboard/api/: vsm.py
source/vsm-deploy/: __clean-data  vsm-deploy.spec  vsm-node
source/vsm-deploy/tools/: agentrc  allinonerc  localrc
source/vsm-deploy/tools/lib/: vsm
source/vsm/tools/: install_venv_common.py
source/vsm/vsm/: exception.py  flags.py  version.py
source/vsm/vsm.egg-info/: SOURCES.txt
source/vsm/vsm/agent/: api.py  driver.py  manager.py  rpcapi.py
source/vsm/vsm/api/v1/: agents.py  (+7 more)
source/vsm/vsm/conductor/: api.py  manager.py  rpcapi.py
source/vsm/vsm/db/: api.py
source/vsm/vsm/diamond/: diamond.conf
source/vsm/vsm/scheduler/: __init__.py  api.py  manager.py  rpcapi.py
ubuntu14/: uninstall.sh  upgrade.sh
ubuntu14/.lib/: vsm-deploy
ubuntu14/vsm/: install-vsm.sh
ubuntu14/vsm-dashboard/: install-vsm-dashboard.sh
ubuntu14/vsm-dashboard/debian/: postinst
ubuntu14/vsm-deploy/: install-vsm-deploy.sh  vsm-node
ubuntu14/vsm-deploy/tools/lib/: vsm
ubuntu14/vsm/debian/: postinst  preinst  prerm
(+33 files in other folders)
