[metadata]
name = python-vsmclient
summary = Virtual Storage Manager API Client Library
description-file =
    README.rst
author = VSM Contributors
author-email = ml-node+s33411n1h81@n7.nabble.com
home-page = https://github.com/01org/virtual-storage-manager
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vsmclient

[entry_points]
console_scripts =
    vsm = vsmclient.shell:main

[wheel]
universal = 1
